# tar-compression-server

./: README.md  Scaling python micro services with rust.ipynb
.ipynb_checkpoints/: Scaling python micro services with rust-checkpoint.ipynb
code/app/: requirements.txt  run.py
code/app/app/: __init__.py
code/app/app/routes/: __init__.py
code/compression-microservice/: .env  .gitignore  Cargo.toml
code/compression-microservice/src/: form_multipart.rs  main.rs
