[package]
name = "compression-microservice"
version = "0.1.0"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]

[dependencies]
rocket = "0.3.14"
rocket_codegen = "0.3.14"
brotli = "2.5.0"
rocket_contrib = "0.3.14"
serde = "1.0.70"
serde_json = "1.0.22"
serde_derive = "1.0.70"
multipart = "0.15.0"
tar = "0.4.16"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
tokio = "0.1.7"
futures = "0.1.23"
futures-cpupool = "0.1.8"
tokio-core = "0.1.17"
tokio-io = "0.1.7"
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
